--- a/front/src/App.css
+++ b/front/src/App.css
@@ -13,7 +13,7 @@
 .container {
     margin: 0 auto;
     padding: 5px;
-    min-width: 320px;
+    max-width: 320px;
     border: 1px solid black
 }
 
