--- a/front/src/App.css
+++ b/front/src/App.css
@@ -13,19 +13,17 @@
 .container {
     margin: 0 auto;
     padding: 5px;
-    max-width: 320px;
+    max-width: 600px;
     border: 1px solid black
 }
 
 
 
-@media (min-width:321px) {
+@media (max-width:320px) {
     .container {
         background-color: red;
-        max-width: 600px;
+        max-width: 320px;
     }
-
-    .title {}
 }
 
 
