--- a/front/src/common/Main/main.scss
+++ b/front/src/common/Main/main.scss
@@ -5,8 +5,8 @@ main {
     flex-grow: 1;
 }
 
-.main__container {
+/* .main__container {
     background-color: green;
     padding: 20px;
     display: block;
-}
+} */
