--- a/front/src/common/Main/main.scss
+++ b/front/src/common/Main/main.scss
@@ -1,7 +1,7 @@
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    //display: flex;
+    //flex-direction: column;
+    //justify-content: center;
     flex-grow: 1;
 }
 
