--- a/front/src/common/Header/header.scss
+++ b/front/src/common/Header/header.scss
@@ -8,11 +8,28 @@
         display:flex;
         justify-content: space-around;
         align-items: center;
-        &-search{
-            //background-image: url('../../../public/icons/search.svg');
-            width:40px;
-            height: 40px;
-            color:red;
+        &-left{
+            &-search svg{
+                
+            }
         }
+        &-center{
+            
+        }
+
+        &-right{
+            &-user svg{
+            }
+        }
+    }
+
+    &__interactive-icon{
+        width:40px;
+        height: 40px;
+        color:gray;
+        &:hover{
+            cursor:pointer;
+            color:orange;
+            }
     }
 }
