--- a/front/src/main.scss
+++ b/front/src/main.scss
@@ -8,10 +8,10 @@
 @import './saas/global/global.scss';
 
 //common section
-@import './common/Header/header.scss';
-@import './common/Main/main.scss';
-@import './common/Footer/footer.scss';
+//@import './common/Header/header.scss';
+//@import './common/Main/main.scss';
+//@import './common/Footer/footer.scss';
 
 //components
-@import './components/Menu/menu.scss';
+//@import './components/Menu/menu.scss';
 
