--- a/front/src/common/Header/header.scss
+++ b/front/src/common/Header/header.scss
@@ -37,4 +37,9 @@
             color:orange;
             }
     }
+    &__icon--fake svg{
+        &:hover{
+            cursor:auto;
+            }
+    }
 }
