--- a/front/src/common/Header/header.scss
+++ b/front/src/common/Header/header.scss
@@ -10,9 +10,6 @@
         align-items: center;
         &-left{
             display: flex;
-            &-search svg{
-                
-            }
         }
         &-center{
             
@@ -25,13 +22,13 @@
         }
     }
 
-    &__icon svg{
+    /* &__icon svg{
         width:40px;
         height: 40px;
         color:rgb(82, 81, 81);
         
-        /* viewBox: 0 0 24 24;
-        stroke-width: 1; */
+        //viewBox: 0 0 24 24;
+        //stroke-width: 1; 
         &:hover{
             cursor:pointer;
             color:orange;
@@ -42,5 +39,5 @@
         &:hover{
             cursor:auto;
             }
-    }
+    } */
 }
