--- a/front/src/common/Main/main.scss
+++ b/front/src/common/Main/main.scss
@@ -3,6 +3,7 @@ main {
     //flex-direction: column;
     //justify-content: center;
     flex-grow: 1;
+    position: relative;
 }
 
 /* .main__container {
