--- a/front/src/components/Menu/menu.scss
+++ b/front/src/components/Menu/menu.scss
@@ -3,8 +3,12 @@
     width: 100%;
     position:absolute;
     z-index: 99;
-    background-color:red;
+    background-color:aquamarine;
     &--hidden{
         display:none;
     }
+}
+
+.menu .container{
+    background-color:aquamarine;
 }
