--- a/front/src/components/Account/Form/form.scss
+++ b/front/src/components/Account/Form/form.scss
@@ -16,4 +16,9 @@
         min-width: 20%;
         padding:4px
     }
+    &:disabled, button[disabled]{
+        border: 1px solid #999999;
+        background-color: #cccccc;
+        color: #666666;
+    }
 }
